# old-guard

./: LICENSE.md  README.md  mvloc.config.jsonc  pyproject.toml
.github/workflows/: nightly.yml
auxfiles-fr/data/og_scripts/: core.lua  ship_ach.lua  turretOLD.lua  turret_menu_temp.lua  turret_systems.lua  (+2 more)
machine-json/: machine-fr-2.10.json  machine-fr-2.17.json  machine-fr-2.4.json  machine-fr-2.8.json  machine-fr-2.9.json  machine-ja-2.17.json  machine-ja-2.9.json
src-en/data/: animations.xml.append  autoBlueprints.xml.append  blueprints.append.lua  blueprints.xml.append  events_addon_icon.xml.append  events_sector_abandoned.xml.append  events_sector_asteroid.xml.append  events_sector_droppoint.xml.append  events_sector_laststand.xml.append  events_sector_og_dawn.xml  events_sector_og_iron.xml  events_sector_unexplored.xml.append  events_special_guards.xml.append  events_special_jukebox.xml.append  events_special_lightspeed.xml.append  events_special_main.xml.append  events_special_og_battlecruisers.xml  events_special_storage.xml.append  hyperspace.xml.append  og_clan_battlecruiser.txt  og_clan_battlecruiser.xml  og_crystal_battlecruiser.txt  og_crystal_battlecruiser.xml  og_iron_bomber.txt  og_iron_bomber.xml  og_iron_corvette.txt  og_iron_corvette.xml  og_iron_fighter.txt  og_iron_fighter.xml  og_iron_guard.txt  og_iron_guard.xml  og_iron_infiltrator.txt  og_iron_infiltrator.xml  og_iron_outrider.txt  og_iron_outrider.xml  og_iron_raider.txt  og_iron_raider.xml  og_iron_scout.txt  og_iron_scout.xml  og_iron_transport.txt  (+23 more)
src-en/mod-appendix/: metadata.xml
(+163 files in other folders)
